tests/ui/error-should-say-copy-not-pod.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/error-should-say-copy-not-pod.rs:6:17
   |
LL |     check_bound("nocopy".to_string());
   |     ----------- ^^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `String`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `check_bound`
  --> $DIR/error-should-say-copy-not-pod.rs:3:18
   |
LL | fn check_bound<T:Copy>(_: T) {}
   |                  ^^^^ required by this bound in `check_bound`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
